# physical_ai_humanoid_robotics_textbook

./: .dockerignore  .gitignore  404.html  Dockerfile  QWEN.md  README.md  docker-compose.yml  index.html  sitemap.xml
.github/workflows/: deploy.yml
.qwen/agents/: .architecture-analyzer.md.swp  architecture-analyzer.md
assets/css/: styles.87aa9449.css  styles.c68770ad.css
assets/js/: 0058b4c6.8bfafc91.js  006b53b4.586850a2.js  006b53b4.7d573669.js  00b6faa2.848bbdba.js  00b6faa2.97910bb5.js  01a85c17.a1586b48.js  06d7ff28.37081a46.js  084cf9c8.c17f5e59.js  0e384e19.08f56454.js  0e384e19.60bc0ae2.js  0fad6b63.b85442a0.js  0fad6b63.bdf4f622.js  1000.8a6f7f5d.js  1203.3671cf30.js  165.936aadc2.js  1741.f5e6a43f.js  1746.5d73de4d.js  17896441.e2e7d81b.js  1adc1d0a.34f38df3.js  1adc1d0a.f53eecd4.js  1c2da6a4.7c9c8210.js  1c2da6a4.f8ec0d69.js  1dea6ca3.4e70117f.js  1df93b7f.1482bfc8.js  1df93b7f.aa9e13a2.js  1f391b9e.a72658e0.js  1f3adcdb.1c5ce077.js  1f3adcdb.790f8039.js  2130.806f55e4.js  (+155 more)
backend/: Dockerfile  README.md  docker-compose.yml  ingest.py  main.py  pyproject.toml  requirements.txt  setup.sh
backend/app/: main.py
backend/src/api/: main.py
backend/src/config/: settings.py
backend/src/models/: document.py  query.py  response.py  source_citation.py
backend/src/services/: embedding_service.py  query_service.py  rag_service.py
blog/: atom.xml  index.html  rss.xml
markdown-page/: index.html
physical-ai-book/: .gitignore  .npmignore  README.md  docusaurus.config.ts  jest.config.js  package-lock.json  package.json
profile/: index.html
(+190 files in other folders)
